--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "backpack-core": "^0.5.0",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "lodash": "^4.17.10"
   }
 }
